Fix the height overflow bug

--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -18,6 +18,7 @@ body {
 	background: linear-gradient(to bottom, #0a6f6f, #095e61, #033432);
     padding: 0px !important;
     overflow-y: auto;
+    display: block;
 }
 
 .add-firend-section {
@@ -402,7 +403,7 @@ body {
 #contacts-list {
     align-items: center;
     flex-direction: column;
-    height: 100%; /* Use 100% for full height */
+    height: calc(100%); /* Use 100% for full height */
     position: relative;
     overflow-y: auto; /* Enable vertical scrolling when content exceeds height */
 }
